# wasm-odessay-jps

./: .gitignore  Cargo.toml  README.md  build  debug  debug.bat  example.css  example.html  example.js  index.html  nightly  test.js  wbuild.bat  wdebug  wdebug.bat
pkg/: wasm_odessay_jps.js  wasm_odessay_jps_bg.wasm
src/: lib.rs
